--- a/dplyrXdf.Rmd
+++ b/dplyrXdf.Rmd
@@ -44,6 +44,7 @@ At the end of this session, you will have learned how to:
 ## Create XDF from taxi data
 
 ```{r load_data, eval = TRUE}
+library(dplyrXdf)
 taxi_xdf <- RxXdfData("yellow_tripdata_2015.xdf")
 ```
 
